--- a/wisata.html
+++ b/wisata.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!--CSS-->
     <link rel="stylesheet" href="../project_web_dasar/css/wisata.css">
+    <!--font awesome-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
     <!--Font Style-->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
@@ -42,64 +45,223 @@
         <div class="judul-1">
             <h1 class="judul">WISATA JAKARTA</h1>
         </div>
-        <hr>
-        <div class="content-1">
-            <div class="picture-content-1">
-                <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
-            </div>
-            <div class="text-content-1">
-                <div class="tagg">
-                    <div class="tag-1">
-                        <p>Sejarah</p>
+
+        <!--Content All-->
+        <div class="content-all">
+            <!--Content 1-->
+            <hr>
+            <div class="content-wisata">
+                <div class="picture-content-wisata">
+                    <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+                </div>
+                <div class="text-content-wisata">
+                    <div class="tagg">
+                        <div class="tag-1">
+                            <p>Sejarah</p>
+                        </div>
+                        <div class="tag-2">
+                            <p>Kota Tua</p>
+                        </div>
                     </div>
-                    <div class="tag-2">
-                        <p>Kota Tua</p>
+                    <div class="judul-content">
+                        <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
                     </div>
-                </div>
-                <div class="judul-content">
-                    <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
-                </div>
-                <div class="creator-content-1">
-                    <p>Penulis : yunpnzr</p>
-                </div>
-                <div class="text-content-main">
-                    <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
-                </div>
-                <div class="creator-content-1">
-                    <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <div class="content-1">
-            <div class="picture-content-1">
-                <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
-            </div>
-            <div class="text-content-1">
-                <div class="tagg">
-                    <div class="tag-1">
-                        <p>Sejarah</p>
+                    <div class="creator-content-wisata">
+                        <p>Penulis : yunpnzr</p>
                     </div>
-                    <div class="tag-2">
-                        <p>Kota Tua</p>
+                    <div class="text-content-main">
+                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
                     </div>
                 </div>
-                <div class="judul-content">
-                    <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+            </div>
+
+            <!--Content 2-->
+            <hr>
+            <div class="content-wisata">
+                <div class="picture-content-wisata">
+                    <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
                 </div>
-                <div class="creator-content-1">
-                    <p>Penulis : yunpnzr</p>
-                </div>
-                <div class="text-content-main">
-                    <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
-                </div>
-                <div class="creator-content-1">
-                    <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                <div class="text-content-wisata">
+                    <div class="tagg">
+                        <div class="tag-1">
+                            <p>Sejarah</p>
+                        </div>
+                        <div class="tag-2">
+                            <p>Kota Tua</p>
+                        </div>
+                    </div>
+                    <div class="judul-content">
+                        <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Penulis : yunpnzr</p>
+                    </div>
+                    <div class="text-content-main">
+                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                    </div>
                 </div>
             </div>
+
+            <!--Content 3-->
+            <hr>
+            <div class="content-wisata">
+                <div class="picture-content-wisata">
+                    <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+                </div>
+                <div class="text-content-wisata">
+                    <div class="tagg">
+                        <div class="tag-1">
+                            <p>Sejarah</p>
+                        </div>
+                        <div class="tag-2">
+                            <p>Kota Tua</p>
+                        </div>
+                    </div>
+                    <div class="judul-content">
+                        <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Penulis : yunpnzr</p>
+                    </div>
+                    <div class="text-content-main">
+                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                    </div>
+                </div>
+            </div>
+
+            <!--Content 4-->
+            <hr>
+            <div class="content-wisata">
+                <div class="picture-content-wisata">
+                    <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+                </div>
+                <div class="text-content-wisata">
+                    <div class="tagg">
+                        <div class="tag-1">
+                            <p>Sejarah</p>
+                        </div>
+                        <div class="tag-2">
+                            <p>Kota Tua</p>
+                        </div>
+                    </div>
+                    <div class="judul-content">
+                        <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Penulis : yunpnzr</p>
+                    </div>
+                    <div class="text-content-main">
+                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                    </div>
+                </div>
+            </div>
+
+            <!--Content 5-->
+            <hr>
+            <div class="content-wisata">
+                <div class="picture-content-wisata">
+                    <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+                </div>
+                <div class="text-content-wisata">
+                    <div class="tagg">
+                        <div class="tag-1">
+                            <p>Sejarah</p>
+                        </div>
+                        <div class="tag-2">
+                            <p>Kota Tua</p>
+                        </div>
+                    </div>
+                    <div class="judul-content">
+                        <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Penulis : yunpnzr</p>
+                    </div>
+                    <div class="text-content-main">
+                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                    </div>
+                </div>
+            </div>
+
+            <!--Content 6-->
+            <hr>
+            <div class="content-wisata">
+                <div class="picture-content-wisata">
+                    <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+                </div>
+                <div class="text-content-wisata">
+                    <div class="tagg">
+                        <div class="tag-1">
+                            <p>Sejarah</p>
+                        </div>
+                        <div class="tag-2">
+                            <p>Kota Tua</p>
+                        </div>
+                    </div>
+                    <div class="judul-content">
+                        <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Penulis : yunpnzr</p>
+                    </div>
+                    <div class="text-content-main">
+                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
         </div>
     </div>
 
+    <!--Footer-->
+    <footer class="footer-distributed">
+        <div class="footer-left">
+            <img class="logo-size-footer" src="pict/logo.png" alt="logo seputar jakarta" srcset="">
+        </div>
+        <div class="footer-center">
+            <div class="footer-icons">
+                <i class="fa-brands fa-facebook-f"></i> 
+                <i class="fa-brands fa-instagram"></i>  
+                <i class="fa-brands fa-twitter"></i>    
+                <i class="fa-regular fa-envelope"></i>  
+                <i class="fa-solid fa-phone"></i>  
+            </div>
+        </div>
+        <div class="footer-right">
+            <form class="row g-2">
+                <div class="col-auto">
+                    <label for="inputPassword2" class="visually-hidden">Password</label>
+                    <input type="email" class="form-control" id="inputPassword2" placeholder="Password">
+                </div>
+                <div class="col-auto">
+                    <button type="submit" class="btn btn-primary btn-sm">Langganan</button>
+                </div>
+                </form>
+        </div>
+    </footer>
+    <div class="fixed-footer">
+        <div class="container">&copy; 2022 All Rights Reserved by Tim 3 Pemrograman Web Dasar Kelas R5M</div>
+    </div>
+
+    <!--Jquery-->
     <script>
         $(window).scroll(function(){
             if ($(this).scrollTop()>250){
