ini gue abis benerin apaan dah? ohiya tombol

--- a/wisata.html
+++ b/wisata.html
@@ -46,13 +46,22 @@
             <h1 class="judul">WISATA JAKARTA</h1>
         </div>
 
+        <!--Button Pemesanan-->
+        <div class="button-ticket">
+            <a href="#">
+                <input type="button" value="Pesan Tiket" name="pesanTiket" id="pesanTiket">
+            </a>
+        </div>
+
         <!--Content All-->
         <div class="content-all">
             <!--Content 1-->
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+                    <a href="artikel_wisata.html">
+                        <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                    </a>
                 </div>
                 <div class="text-content-wisata">
                     <div class="tagg">
@@ -64,7 +73,9 @@
                         </div>
                     </div>
                     <div class="judul-content">
-                        <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        <a href="artikel_wisata.html">
+                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        </a>
                     </div>
                     <div class="creator-content-wisata">
                         <p>Penulis : yunpnzr</p>
@@ -80,10 +91,11 @@
 
             <!--Content 2-->
             <hr>
-            <a href="artikel_wisata.html">
                 <div class="content-wisata">
                     <div class="picture-content-wisata">
-                        <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+                        <a href="artikel_wisata.html">
+                            <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                        </a>
                     </div>
                     <div class="text-content-wisata">
                         <div class="tagg">
@@ -95,7 +107,9 @@
                             </div>
                         </div>
                         <div class="judul-content">
-                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                            <a href="artikel_wisata.html">
+                                <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                            </a>
                         </div>
                         <div class="creator-content-wisata">
                             <p>Penulis : yunpnzr</p>
@@ -108,13 +122,14 @@
                         </div>
                     </div>
                 </div>
-            </a>
 
             <!--Content 3-->
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+                    <a href="artikel_wisata.html">
+                        <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                    </a>
                 </div>
                 <div class="text-content-wisata">
                     <div class="tagg">
@@ -126,7 +141,9 @@
                         </div>
                     </div>
                     <div class="judul-content">
-                        <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        <a href="artikel_wisata.html">
+                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        </a>
                     </div>
                     <div class="creator-content-wisata">
                         <p>Penulis : yunpnzr</p>
@@ -144,7 +161,9 @@
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+                    <a href="artikel_wisata.html">
+                        <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                    </a>
                 </div>
                 <div class="text-content-wisata">
                     <div class="tagg">
@@ -156,7 +175,11 @@
                         </div>
                     </div>
                     <div class="judul-content">
-                        <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        <a href="artikel_wisata.html">
+                            <a href="artikel_wisata.html">
+                                <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                            </a>
+                        </a>
                     </div>
                     <div class="creator-content-wisata">
                         <p>Penulis : yunpnzr</p>
@@ -174,7 +197,9 @@
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+                    <a href="artikel_wisata.html">
+                        <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                    </a>
                 </div>
                 <div class="text-content-wisata">
                     <div class="tagg">
@@ -186,7 +211,9 @@
                         </div>
                     </div>
                     <div class="judul-content">
-                        <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        <a href="artikel_wisata.html">
+                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        </a>
                     </div>
                     <div class="creator-content-wisata">
                         <p>Penulis : yunpnzr</p>
@@ -204,7 +231,9 @@
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+                    <a href="artikel_wisata.html">
+                        <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                    </a>
                 </div>
                 <div class="text-content-wisata">
                     <div class="tagg">
@@ -216,7 +245,9 @@
                         </div>
                     </div>
                     <div class="judul-content">
-                        <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        <a href="artikel_wisata.html">
+                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        </a>
                     </div>
                     <div class="creator-content-wisata">
                         <p>Penulis : yunpnzr</p>
