--- a/wisata.html
+++ b/wisata.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
     <!--Font Style-->
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500&family=Source+Sans+Pro&display=swap');
     </style>
     <!--Jquery-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -279,20 +279,19 @@
             </div>
         </div>
         <div class="footer-right">
-            <form class="row g-2">
-                <div class="col-auto">
-                    <label for="inputPassword2" class="visually-hidden">Password</label>
-                    <input type="email" class="form-control" id="inputPassword2" placeholder="Password">
-                </div>
-                <div class="col-auto">
-                    <button type="submit" class="btn btn-primary btn-sm">Langganan</button>
-                </div>
-                </form>
+            <form class="form-langganan">
+                <input class="form-email" type="text" name="email" id="email" placeholder="input email anda">
+                <a href="#">
+                    <input class="form-button" type="button" value="Berlangganan" name="berlangganan" id="berlangganan">
+                </a>
+            </form>
+        </div>
+        <div class="fixed-footer">
+            <div class="container">
+                <p>&copy; 2022 All Rights Reserved by Tim 3 Pemrograman Web Dasar Kelas R5M</p>
+            </div>
         </div>
     </footer>
-    <div class="fixed-footer">
-        <div class="container">&copy; 2022 All Rights Reserved by Tim 3 Pemrograman Web Dasar Kelas R5M</div>
-    </div>
 
     <!--Jquery-->
     <script>
