benerin footer by yunpnzr

--- a/index.html
+++ b/index.html
@@ -627,42 +627,34 @@
         </div>
     </div>
 
+    <!--Footer-->
     <footer class="footer-distributed">
-
-			<div class="footer-left">
-                <img class="logo-size-footer" src="pict/logo.png" alt="logo seputar jakarta" srcset="">
-			</div>
-
-			<div class="footer-center">
-				<div class="footer-icons">
-					<i class="fa-brands fa-facebook-f"></i> 
-                    <i class="fa-brands fa-instagram"></i>  
-                    <i class="fa-brands fa-twitter"></i>    
-                    <i class="fa-regular fa-envelope"></i>  
-                    <i class="fa-solid fa-phone"></i>  
-				</div>
-			</div>
-
-			<div class="footer-right">
-				<form>
-                    <div class="row">
-                        <div class="col-auto">
-                            <input type="email" name="email" placeholder="Tulis email anda untuk berlangganan berita" />
-                        </div>
-                        <div class="col-auto">
-                            <input type="submit" value="Langganan">
-                        </div>
-                    </div>
-                </form>
-			</div>
-
-	</footer>
-
-        <div class="fixed-footer">
-            <div class="container">&copy; 2022 All Rights Reserved by Tim 3 Pemrograman Web Dasar Kelas R5M</div>
+        <div class="footer-left">
+            <img class="logo-size-footer" src="pict/logo.png" alt="logo seputar jakarta" srcset="">
         </div>
-        
-
+        <div class="footer-center">
+            <div class="footer-icons">
+                <i class="fa-brands fa-facebook-f"></i> 
+                <i class="fa-brands fa-instagram"></i>  
+                <i class="fa-brands fa-twitter"></i>    
+                <i class="fa-regular fa-envelope"></i>  
+                <i class="fa-solid fa-phone"></i>  
+            </div>
+        </div>
+        <div class="footer-right">
+            <form class="form-langganan">
+                <input class="form-email" type="text" name="email" id="email" placeholder="input email anda">
+                <a href="#">
+                    <input class="form-button" type="button" value="Berlangganan" name="berlangganan" id="berlangganan">
+                </a>
+            </form>
+        </div>
+        <div class="fixed-footer">
+            <div class="container">
+                <p>&copy; 2022 All Rights Reserved by Tim 3 Pemrograman Web Dasar Kelas R5M</p>
+            </div>
+        </div>
+    </footer>
 
     <!--Script jquery-->
     <script>
