--- a/artikel_wisata.html
+++ b/artikel_wisata.html
@@ -30,7 +30,7 @@
                 <li><a href="index.html" class="link-navigation-1">Home</a></li>
                 <li><a href="#" class="link-navigation-1">Sejarah</a></li>
                 <li><a href="#" class="link-navigation-1">Budaya</a></li>
-                <li><a href="wisata.html" class="link-navigation-1">Wisata</a></li>
+                <li><a href="wisata.html" class="link-navigation-1-wisata">Wisata</a></li>
                 <li><a href="#" class="link-navigation-1">Rute</a></li>
                 <li><a href="#" class="link-navigation-1">Kuliner</a></li>
             </ul>
@@ -49,6 +49,8 @@
                     <p>Penulis : yunpnzr pada 19 November 2022</p>
                 </div>
             </div>
+
+            <!--Nama, artikel lain-->
             <div class="float-right-1">
                 <div class="card-nama">
                     <h3>Tentang Penulis</h3>
@@ -56,8 +58,118 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 <hr>
+                <div class="content-article-liyane">
+                    <h3>Artikel Lainnya</h3>
+                    <!--Content 1-->
+                    <div class="content-wisata">
+                        <div class="picture-content-wisata">
+                            <a href="artikel_wisata.html">
+                                <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                            </a>
+                        </div>
+                        <div class="text-content-wisata">
+                            <div class="tagg">
+                                <div class="tag-1">
+                                    <p>Sejarah</p>
+                                </div>
+                                <div class="tag-2">
+                                    <p>Kota Tua</p>
+                                </div>
+                            </div>
+                            <div class="judul-content">
+                                <a href="artikel_wisata.html">
+                                    <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                                </a>
+                            </div>
+                            <div class="text-content-main">
+                                <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara.. <a href="#">Read more...</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Content 2-->
+                    <div class="content-wisata">
+                        <div class="picture-content-wisata">
+                            <a href="artikel_wisata.html">
+                                <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                            </a>
+                        </div>
+                        <div class="text-content-wisata">
+                            <div class="tagg">
+                                <div class="tag-1">
+                                    <p>Sejarah</p>
+                                </div>
+                                <div class="tag-2">
+                                    <p>Kota Tua</p>
+                                </div>
+                            </div>
+                            <div class="judul-content">
+                                <a href="artikel_wisata.html">
+                                    <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                                </a>
+                            </div>
+                            <div class="text-content-main">
+                                <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara.. <a href="#">Read more...</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Content 3-->
+                    <div class="content-wisata">
+                        <div class="picture-content-wisata">
+                            <a href="artikel_wisata.html">
+                                <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                            </a>
+                        </div>
+                        <div class="text-content-wisata">
+                            <div class="tagg">
+                                <div class="tag-1">
+                                    <p>Sejarah</p>
+                                </div>
+                                <div class="tag-2">
+                                    <p>Kota Tua</p>
+                                </div>
+                            </div>
+                            <div class="judul-content">
+                                <a href="artikel_wisata.html">
+                                    <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                                </a>
+                            </div>
+                            <div class="text-content-main">
+                                <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara.. <a href="#">Read more...</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Content 4-->
+                    <div class="content-wisata">
+                        <div class="picture-content-wisata">
+                            <a href="artikel_wisata.html">
+                                <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                            </a>
+                        </div>
+                        <div class="text-content-wisata">
+                            <div class="tagg">
+                                <div class="tag-1">
+                                    <p>Sejarah</p>
+                                </div>
+                                <div class="tag-2">
+                                    <p>Kota Tua</p>
+                                </div>
+                            </div>
+                            <div class="judul-content">
+                                <a href="artikel_wisata.html">
+                                    <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                                </a>
+                            </div>
+                            <div class="text-content-main">
+                                <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara.. <a href="#">Read more...</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+            <!--Artikel utama-->
             <div class="float-left-1">
+                <!--Isi artikel-->
                 <div class="content-article">
                     <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.</p>
 
@@ -79,9 +191,42 @@
                         
                     <p>Selain Museum Sejarah Jakarta ada beberapa Museum yang menarik seperti Museum Wayang, Museum Seni Rupa, dan Museum Mandiri.Kawasan ini juga sangat digemari fotografer yang ingin melatari fotonya dengan arsitektur bangunan tempo dulu.</p>
                 </div>
+                <!--Tags-->
+                <div>
+                    <h2>Tags</h2>
+                </div>
             </div>
         <!--</div>-->
     </div>
+
+    <!--Footer-->
+    <footer class="footer-distributed">
+        <div class="footer-left">
+            <img class="logo-size-footer" src="pict/logo.png" alt="logo seputar jakarta" srcset="">
+        </div>
+        <div class="footer-center">
+            <div class="footer-icons">
+                <i class="fa-brands fa-facebook-f"></i> 
+                <i class="fa-brands fa-instagram"></i>  
+                <i class="fa-brands fa-twitter"></i>    
+                <i class="fa-regular fa-envelope"></i>  
+                <i class="fa-solid fa-phone"></i>  
+            </div>
+        </div>
+        <div class="footer-right">
+            <form class="form-langganan">
+                <input class="form-email" type="text" name="email" id="email" placeholder="input email anda">
+                <a href="#">
+                    <input class="form-button" type="button" value="Berlangganan" name="berlangganan" id="berlangganan">
+                </a>
+            </form>
+        </div>
+        <div class="fixed-footer">
+            <div class="container">
+                <p>&copy; 2022 All Rights Reserved by Tim 3 Pemrograman Web Dasar Kelas R5M</p>
+            </div>
+        </div>
+    </footer>
 
     <script>
         $(window).scroll(function(){
