--- a/artikel_wisata.html
+++ b/artikel_wisata.html
@@ -165,6 +165,19 @@
                         </div>
                     </div>
                 </div>
+                <hr>
+                <!--Tags-->
+                <div class="tag-artikel">
+                    <h2>Tag Artikel ini:</h2>
+                    <div class="tagg">
+                        <div class="tag-1">
+                            <p>Sejarah</p>
+                        </div>
+                        <div class="tag-1">
+                            <p>Kota Tua</p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!--Artikel utama-->
@@ -191,9 +204,22 @@
                         
                     <p>Selain Museum Sejarah Jakarta ada beberapa Museum yang menarik seperti Museum Wayang, Museum Seni Rupa, dan Museum Mandiri.Kawasan ini juga sangat digemari fotografer yang ingin melatari fotonya dengan arsitektur bangunan tempo dulu.</p>
                 </div>
-                <!--Tags-->
-                <div>
-                    <h2>Tags</h2>
+            </div>
+
+            <!--Komentar-->
+            <div class="comment">
+                <h2>Komentar</h2>
+                <div class="comment-name">
+                    <p>Email <br>
+                        <input class="inputan" type="email" name="email" id="email" placeholder="example@email.com">
+                    </p>
+                    <p>Nama <br>
+                        <input class="inputan" type="text" name="nama" id="nama" placeholder="Masukkan nama anda">
+                    </p>
+                    <p>Komentar <br>
+                        <textarea class="comment-column" name="komentar" id="komentar" placeholder="Tulis komentar..."></textarea>
+                    </p>
+                    <input type="submit" value="Kirim" name="kirim" id="kirim">
                 </div>
             </div>
         <!--</div>-->
