artikel wisata done by yunpnzr

--- a/artikel_wisata.html
+++ b/artikel_wisata.html
@@ -219,8 +219,17 @@
                     <p>Komentar <br>
                         <textarea class="comment-column" name="komentar" id="komentar" placeholder="Tulis komentar..."></textarea>
                     </p>
-                    <input type="submit" value="Kirim" name="kirim" id="kirim">
+                    <div class="send-button-float">
+                        <a href="#">
+                            <input class="send-button" type="submit" value="Kirim" name="kirim" id="kirim">
+                        </a>
+                    </div>
                 </div>
+            </div>
+
+            <!--Komentar outputr-->
+            <div class="komentar-output">
+                <h2>Komentar: 0 Komentar</h2>
             </div>
         <!--</div>-->
     </div>
